[gd_scene load_steps=10 format=3 uid="uid://t6qfejjwvxo5"]

[ext_resource type="Script" uid="uid://cs6rcyuifxurf" path="res://triangulo_controls.gd" id="1_onpox"]
[ext_resource type="Texture2D" uid="uid://bncopu6cannat" path="res://img/taquaral.jpg" id="2_16bo2"]
[ext_resource type="PackedScene" uid="uid://hvfgktj3o36l" path="res://mp_3_loader.tscn" id="2_b6gyb"]
[ext_resource type="PackedScene" uid="uid://bvfci3ptk4mgy" path="res://compasso.tscn" id="3_dusqt"]
[ext_resource type="PackedScene" uid="uid://chcrvuwqhrsb5" path="res://touchscreen_scene.tscn" id="4_dusqt"]
[ext_resource type="PackedScene" uid="uid://c5g75l2jle23l" path="res://triangulo.tscn" id="5_lp6sv"]
[ext_resource type="Texture2D" uid="uid://l857iwqsuyp4" path="res://img/metronome.png" id="7_2iu38"]
[ext_resource type="Texture2D" uid="uid://gnxejbpyyfy8" path="res://img/maozinha.png" id="8_lp6sv"]
[ext_resource type="PackedScene" uid="uid://kc53kmnctf4c" path="res://tutorial.tscn" id="9_ruwoj"]

[node name="TrianguloControls" type="Node2D"]
script = ExtResource("1_onpox")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1924.0
offset_bottom = 1076.0
texture = ExtResource("2_16bo2")

[node name="TrianguloLoader" parent="." instance=ExtResource("2_b6gyb")]

[node name="Compasso" parent="." instance=ExtResource("3_dusqt")]
position = Vector2(19, 74)

[node name="MetronomoLoader" parent="." instance=ExtResource("2_b6gyb")]

[node name="Triangulo" parent="." instance=ExtResource("5_lp6sv")]
position = Vector2(547, 19)

[node name="Batedor" parent="." instance=ExtResource("4_dusqt")]
position = Vector2(375, 575)

[node name="AudioLoader" parent="." instance=ExtResource("2_b6gyb")]

[node name="Metronomo" type="TouchScreenButton" parent="."]
position = Vector2(1620, 838)
texture_normal = ExtResource("7_2iu38")

[node name="Maozinha" type="TouchScreenButton" parent="."]
position = Vector2(987.9999, 256.99997)
rotation = 0.25830874
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_lp6sv")

[node name="Tutorial" parent="." instance=ExtResource("9_ruwoj")]
visible = false

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 782.0
offset_top = 934.0
offset_right = 1074.0
offset_bottom = 1030.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70

[connection signal="ended" from="Compasso" to="." method="_on_compasso_ended"]
[connection signal="seta_moved" from="Compasso" to="." method="_on_compasso_seta_moved"]
[connection signal="finished" from="MetronomoLoader" to="." method="_on_metronomo_loader_finished"]
[connection signal="entered_embaixo" from="Triangulo" to="." method="_on_triangulo_entered_embaixo"]
[connection signal="entered_emcima" from="Triangulo" to="." method="_on_triangulo_entered_emcima"]
[connection signal="is_dragging" from="Batedor" to="." method="_on_batedor_is_dragging"]
[connection signal="pressed" from="Metronomo" to="." method="_on_metronomo_pressed"]
[connection signal="pressed" from="Maozinha" to="." method="_on_maozinha_pressed"]
[connection signal="ended" from="Tutorial" to="." method="_on_tutorial_ended"]
